--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,9 @@
-<mat-toolbar color="primary">MyMessages</mat-toolbar>
+<mat-toolbar color="primary">
+  <a routerLink=""> <span>MyMessages</span></a>
+  <span class="spacer"></span>
+<ul>
+  <li>
+    <a mat-button routerLink="/create" routerLinkActive="mat-primary">Create a Post</a>
+  </li>
+</ul>
+</mat-toolbar>
